--- a/gamba/mods/mod-loading-screen.pw.toml
+++ b/gamba/mods/mod-loading-screen.pw.toml
@@ -1,6 +1,6 @@
 name = "Mod Loading Screen"
 filename = "mod-loading-screen-1.0.5.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/xAGJ6rQS/versions/dHmCqlFI/mod-loading-screen-1.0.5.jar"
